AKS yml files/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: digitalfitness.eastus.cloudapp.azure.com
  - http:
      paths:
      - path: /announcement(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: announcementapi-service
            port:
              number: 80
      - path: /challenge(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: challengeapi-service
            port:
              number: 80
      - path: /chat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: chatapi-service
            port:
              number: 80
      - path: /diet(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dietapi-service
            port:
              number: 80
      - path: /fitness(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: fitnessapi-service
            port:
              number: 80
      - path: /inquiry(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: inquiryapi-service
            port:
              number: 80
      - path: /notification(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: notificationapi-service
            port:
              number: 80
      - path: /plan(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: planapi-service
            port:
              number: 80
      - path: /profile(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: profileapi-service
            port:
              number: 80
      - path: /survey(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: surveyapi-service
            port:
              number: 80
